<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/background">

    <!-- Título -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/perfil_titulo"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp" />

    <!-- Nombre -->
    <TextView
        android:id="@+id/viewNombre"
        android:background="#ffffff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/perfil_nombre"
        android:textSize="20sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Apellido -->

    <!-- Email -->
    <TextView
        android:id="@+id/viewApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="8dp"
        android:text="@string/perfil_apellido"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewNombre" />

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/perfil_email"
        android:textSize="20sp"
        android:background="#ffffff"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/viewApellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- DNI -->
    <TextView
        android:id="@+id/viewDni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/perfil_dni"
        android:background="#ffffff"
        android:textSize="20sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/viewEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Teléfono -->
    <TextView
        android:id="@+id/viewTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/perfil_telefono"
        android:textSize="20sp"
        android:background="#ffffff"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/viewDni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Username -->
    <TextView
        android:id="@+id/viewUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/perfil_usuario"
        android:textSize="20sp"
        android:padding="8dp"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/viewTelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Password -->
    <TextView
        android:id="@+id/viewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/perfil_contrasena"
        android:textSize="20sp"
        android:background="#ffffff"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/viewUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ID del Usuario -->
    <TextView
        android:id="@+id/viewId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/perfil_id"
        android:textSize="20sp"
        android:padding="8dp"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/viewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Botón Volver -->
    <Button
        android:id="@+id/btnVolver"
        android:layout_width="291dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_rect_red"
        android:text="@string/perfil_btn_volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewId" />

</androidx.constraintlayout.widget.ConstraintLayout>
