<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background">

    <!-- Título -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Presupuesto_new_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#2C3E50"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>

    <!-- Cantidad Limite -->
    <EditText
        android:id="@+id/etCantidadLimite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Presupuesto_new_Cantidad"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:textColor="@color/textPrimary"/>

    <!-- Descripción -->
    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Presupuesto_new_Descripción"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:textColor="@color/textPrimary"/>

    <!-- Botón Guardar -->
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Presupuesto_new_B_guardar"
        android:background="@drawable/btn_rect_secondary"
        android:padding="16dp"
        android:layout_marginTop="20dp"/>

    <!-- Botón Cancelar -->
    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Presupuesto_new_B_cancelar"
        android:background="@drawable/btn_rect_red"
        android:padding="16dp"
        android:layout_marginTop="10dp"/>
</LinearLayout>
