<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="16dp">

    <TextView
        android:id="@+id/textoSuperior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Funcionamiento_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingBottom="16dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:background="#ffffff"
                android:id="@+id/textoInferior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Funcionamiento_txt"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rect_secondary"
        android:text="@string/Funcionamiento_Button"
        android:layout_marginTop="16dp"/>
</LinearLayout>
